<resources>
    <string name="app_name">Zaldibar Patapol</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="boton_fragment_inicio">Hasi Gaitezan!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="juegotitulo">OSPITAL PSIKIATRIKOA</string>
    <string name="juegotexto">Ez ditugu bainuetxeak ahaztu behar, zeren eta, haiengatik ez balitz, orain ez genituzke ez ospitalerik ezta Zaldibarko herririk izango. Haien oroimena zorionez oroitzeko gai zara? Erakutsi zure oroimen-trebetasunak!</string>

    <string name="fragment_inico_juego1_titulo">San Martin Ermita</string>
    <string name="fragment_inico_juego1_texto">San Martin ermita orain dela urte asko eraiki zen, baina gaur egungo ermita 1862. urtean eraiki zen, udalak eskainitako eta herritarrek gehitutako diruarekin. Mende bat igaro ostean, hau da, 1977. urtean,  ermita hau berriztatu egin zen, gaur egun arte. Oso egoera onean dagoela esan daiteke, modu egokian zaintzen baitute. Ermita honen jaia, hau da, San Martin jaia, uztailaren 8aren hurrengoko igandean ospatzen da (udako San Andres osteko jaia). Baselizan meza egon ondoren, dantzak, herri kirolak eta erromeria egiten da.</string>

    <string name="fragment_inico_juego2_titulo">Bainuetxe-Ospitala</string>
    <string name="fragment_inico_juego2_texto">Aspaldian Zaldibar herriak, Zaldua zuen izena. Izan ere, jente aberatsa eta ezaguna hasi zen trenez herrira etortzen, konkretuki bainuetxe hauetara. Beraz, bertoko geltokiaren izenaz (Zaldibar) ezagutzen zuten herria, bere izena bilakatuz. Hortaz, esan dezakegu bainuetxe hauen arrakastak herriaren izena aldatu zuela. Bestalde, XX. mendearen hasieran, medikuntzaren garapenak bainuetxeen porrota ekarri zuen, ospea galtzen hasi baitziren haietako gehienak ixtera eramanez. Orduan, 1922an, Zaldibarreko bainuetxeak zarratu eta eraikinak ospitale psikiatriko bilakatu ziren (2.2 Argazkia).
</string>

    <string name="fragment_inico_juego3_titulo">Zaldibarko Pilotalekuak</string>
    <string name="fragment_inico_juego3_texto">1933. urterarte, herritarrek elizpea erabiltzen zuten pilotan jolasteko, hau baitzen jolas zezaketen leku bakarra. Aldiz, hortik aurrera beste hainbat frontoi eraiki ziren, hala nola, eskolakoa, San Martin plazakoa...
1943. urtean markinaldeko txapelketak hasi ziren, lehena Zaldibarren ospaturik. Geroago elizpeko, herrien arteko, durangaldeko, eskualdeko… txapelketak ere ospatu zituzten. Gaur egun oso famatua den Olazar pilotalekua dugu hemen aurrean, 1988an inauguratua.</string>

    <string name="fragment_inico_juego4_titulo">Zaldibarko Dorrea</string>
    <string name="fragment_inico_juego4_texto">Gaur egun, Zaldibarreko Dorrean lehen arkitektonika interesgarria zuen gotorleku-dorrearen aztarna gutxi batzuk ikus daitezke. XV. gizaldian bota edo desegin zen eta, horren ondorioz, eraitsi egin zen dorre gehienekin gertatu zen bezala. Baina XVI. mendearen hasieran, Zaldibarren leinuak dorrea berreraiki zuen eta denboran zehar beste jabe batzuengana pasa zen. XX. mendean, jabeak Bizkaiko Foru Aldundiari saldu zion, baina honek ez zuen bere gain hartu mantentzeko ardura, beraz, dorrea 1961ean erori zen.
</string>

    <string name="fragment_inico_juego5_titulo">Santamañeko istripua</string>
    <string name="fragment_inico_juego5_texto">2002. urtean, Zaldibarreko Santamañeko istripua gertatu zen. Hegazkin batek, Santa Marina Zahar mendiaren kontra egin zuen, mendia sahiestu ezinean (sartu hurrengo bi audioak, hegazkina hegan egiten eta bat-batean istripua: Bi audioak). Barruan, hiru pertsona zihoazen soilik, baina hirurak istripuan hil egin ziren. Kontu handiz egin behar dira horrelako gauzak, hegazkin bat gidatzea edota sortzea ez da lan erraza, istripuak frogatu zuen bezala. Hegazkina zati txikitan apurtuta agertu zen, horiek guztiak menditik sakabanatuta.
</string>

    <string name="fragment_inico_juego6_titulo">Zabortegia</string>
    <string name="fragment_inico_juego6_texto">2020ko otsailaren 6an aurrean dugun zabortegiak mendian behera egin zuen (audio batez zarata izugarri bat gehitu (txertatu luizi soinua)). Bertan lanean ari ziren bi gizon desagertu egin ziren: Joaquin eta Alberto. Haiek salbatzeko ahal zuten guztia egin zen arren, bilaketa lanak ezinezkoak bilakatu ziren lurra oso desegonkorra baitzen, bertan substantzia oso kaltegarriak aurkiturik.
Gertatu zenaren ondorioz manifestazioak, protestak… egiten hastetik abestiak eta bideoak sortzerarte. Askok pentsatzen zuten langileen egoera desegokia eta arriskutsua zela eta egoera hori aldatzeko saiakerak egin zituzten.</string>

    <string name="fragment_inico_juego7_titulo">Jaietako txopoa</string>
    <string name="fragment_inico_juego7_texto">Uztailaren erdian, San Andres jaiak ospatzen dira Zaldibarren. Durangaldea osatzen duten herri guztietan jaiei hasiera emateko txopo izeneko enbor handi bat altxatzen da,  eta hau udalerriko landaketen artean aurreko egunetan aukeratzen den pinu handi bat da. Jaiei hasiera emateko asmoz, herritarrak udaletxeko plazara hurbiltzen dira eta hainbat gizon eta emakumeren artean txopoa altxatzen dute. Bere altxaerak jaien hasiera zehazten du eta hauek bukatzean bota egiten da.
</string>


    <string name="title_activity_juego6">juego6</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="sartu">Sartu</string>
    <string name="atera">Atera</string>
    <string name="libre">Modu askea aktibatu!</string>
    <string name="librepas">Sartu pasahitza modu askean sartzeko:</string>

    <string name="zorionaksave">Zorionak!
    Joku guztiak bukatu dituzu!
    2:10:30 denbora barruan bukatu duzu</string>
    <string name="izenasave">Sartu izen bat partida gordetzeko:</string>

    <string name="secretword">Motxilan bildu dituzuen letrak batuta elizatea edo hiribildua den jakingo duzue. Has zaitezte letrak ordenean jartzen!</string>
    <string name="konprobatu">Konprobatu!</string>
    <string name="E">E</string>
    <string name="L">L</string>
    <string name="I">I</string>
    <string name="Z">Z</string>
    <string name="A">A</string>
    <string name="T">T</string>
    <string name="X">X</string>
    <string name="E2">E</string>
    <string name="berriz">Berriro hasi</string>


    <string name="hurrengo">Hurrengo jokoa!</string>
    <string name="pista">Pistak hurrengo motxilan gorde dira!</string>
    <string name="zorionak">Zorionak, hemen daukazu gune honen pista:</string>
    <string name="bukatu">Zorionak, jokoa bukatu duzu!</string>
    <string name="berriro">BERRIRO SAIATU</string>
    <string name="aurkituta">AURKITUTA:</string>
    <string name="zabor">ZABOR GUZTI HAU DAGOKION KUTXAN SARTU</string>
    <string name="aurkitu">AURKITU 6 EZBERDINTASUNAK</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="button_esku_pilota">Esku-pilota</string>
    <string name="button_txinga_erute">Txinga erute</string>
    <string name="button_aizkolaritza">Aizkolaritza</string>
    <string name="button_astoproba">Astoproba</string>
    <string name="button_segaproba">Segaproba</string>
    <string name="button_sokatira">Sokatira</string>
    <string name="button_estroprobak">Estroprobak</string>
    <string name="button_harrijasotze">Harrijasotze</string>

    <string name="sekretua">Hitz sekretua</string>

    <string name="pasahitza">Pasahitza</string>

    <string name="contraseña">1221</string>

    <string name="Zorionak1">Zorionak, </string>
    <string name="tiempo">Hau izan da erabili duzun denbora:</string>

    <string name="HasiBerriro">Berriro jolastu </string>
    <string name="Atera">Atera </string>

    <string name="error">ERROR</string>
    <string name="zaborrahartu">Lehenengoz zaborra hartu!</string>
    <string name="jarraitu">Jarraitu</string>
    <string name="idatzi">Mesedez, idatzi zerbait.</string>
    <string name="ezdazuzena">Pasahitza ez da zuzena!</string>
    <string name="hitzsekretua">elizate</string>
    <string name="librea">MODU LIBREA</string>
    <string name="desaktibatu">Modu librea desaktibatu nahi duzu?</string>
    <string name="bai">Bai</string>
    <string name="ez">Ez</string>
    <string name="kontuz">Kontuz!</string>
    <string name="berrirohasinahi"> Berriro hasi nahi duzu Zaldibarreko ibiblbidea?</string>



</resources>