<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".navegador_superior">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="122dp"
            android:layout_height="72dp"
            android:background="@android:color/transparent"
            android:contentDescription="TODO"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.024"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.024"
            tools:ignore="MissingConstraints"
            android:src="@drawable/escudozaldibar" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="151dp"
            android:layout_height="95dp"
            android:background="@android:color/transparent"
            android:contentDescription="TODO"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.984"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.007"
            tools:ignore="MissingConstraints"
            android:src="@drawable/upv" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutreal"
            android:layout_width="match_parent"
            android:layout_height="364dp"
            android:background="@drawable/modulibre"
            tools:layout_editor_absoluteX="-16dp"
            tools:layout_editor_absoluteY="220dp"
            tools:ignore="MissingConstraints"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="357dp"
                android:layout_height="65dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.039">

                <ImageButton
                    android:id="@+id/salirbtn"
                    android:layout_width="48dp"
                    android:layout_height="45dp"
                    android:background="@drawable/texto_fragments_borde"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@android:drawable/ic_delete"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.984"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.333"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="295dp"
                    android:layout_height="40dp"
                    android:text="@string/libre"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="25dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.08"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.48" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout4"
                android:layout_width="306dp"
                android:layout_height="85dp"
                android:background="@drawable/texto_fragments_borde"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.315">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="276dp"
                    android:layout_height="49dp"
                    android:text="@string/librepas"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="17dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.533"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.444"
                    tools:ignore="MissingConstraints,TextSizeCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/sartubtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorVerde"
                android:text="@string/sartu"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.275"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.851" />

            <Button
                android:id="@+id/aterabtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/rojo"
                android:text="@string/atera"
                android:textColor="#000000"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.714"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.851" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="379dp"
                android:layout_height="65dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.615">

                <EditText
                    android:id="@+id/textpasahitza"
                    android:layout_width="276dp"
                    android:layout_height="48dp"
                    android:background="@drawable/texto_fragments_borde"
                    android:ems="10"
                    android:hint="@string/pasahitza"
                    android:inputType="textPassword"
                    android:textAlignment="center"
                    android:textColorHint="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>